2010-05-21 Homer Xing <homer.xing@gmail.com>

    * Clean up Nautilus thumbnails image cache.

2010-05-20 Homer Xing <homer.xing@gmail.com>

    * Detect missing packages in ArchLinux

2010-05-19 Homer Xing <homer.xing@gmail.com>

    * Add SweetHome3D
    * Add Fix_error_in_netbeans_shortcut_Ubuntu in "Computer Doctor" pane.
    * Add Add_user_to_vboxusers_group in "Computer Doctor" pane.
    * Add Fix_error_in_fontconfig_properties_Ubuntu in "Computer Doctor" pane.
    * Add Fix_error_in_49_sansserif_conf in "Computer Doctor" pane.

2010-05-18 Homer Xing <homer.xing@gmail.com>

    * Add "Computer Doctor" pane.

2010-05-16 Homer Xing <homer.xing@gmail.com>

    * Improve "Clean up unused kernels". Display Linux kernel size.
    * Add "Remove auto-removable packages" feature.
    * Add text to explain cache dropping operation.
    * Show traceback in window, rather than in terminal.
    * Show/hide an icon by the side of software name.
    * Hide a software item if its package name has been changed.

2010-05-16 Devil Wang <wxjeacen.gmail.com>

    * Add Emacs

2010-05-14 Devil Wang <wxjeacen.gmail.com>
    
    * Add Ailurus un-install script. It helps developers to un-install Ailurus.
    
2010-05-14 Homer Xing <homer.xing@gmail.com>

    * Fix bug: DisableGetty output error on Fedora 13

2010-05-14 HAN Haofu <gtxx3600@gmail.com>

    *Rename 'platfrom' to 'DE'(Desktop Environment)
    *Add attrs (DE_kde,DE_gnome,DE_universe) in install_remove_pane
    *Add new icon velly_icons/software_default_icon.png
    *Move load_app_icon(name) from 'libu.py' to 'loader.py'
    *Add an new attr 'DE' in all 'package_class' to identify the package's desktop environment
    *Add icon on install_remove_pane to show package's desktop environment
    *Add 2 icon files into 'other_icons': 'kde.png', 'gnome.png'
    
2010-05-11 HAN Haofu <gtxx3600@gmail.com>

    *Add icon for package that has no icon
    *Move some relative code to loader.py 
