@@ -40,6 +40,7 @@ class CleanUpPane(gtk.VBox):
             self.pack_start(self.clean_apt_cache_button(), False)
             self.pack_start(UbuntuCleanKernelBox(), False)
             self.pack_start(UbuntuAutoRemovableBox())
+            self.pack_start(UbuntuDeleteUnusedConfigBox())
         elif FEDORA:
             self.pack_start(self.clean_rpm_cache_button(), False)
         elif ARCHLINUX:
@@ -435,5 +436,109 @@ class UbuntuAutoRemovableBox(gtk.HBox):
         
         view.set_sensitive(False)
         self.liststore.append([True, _('Please press the "Refresh" button.'), 0, ''])
+        button_unselect_all.set_sensitive(False)
+        button_delete.set_sensitive(False)
+
+class UbuntuDeleteUnusedConfigBox(gtk.HBox):
+    def text_data_func(self, column, cell, model, iter):
+        keep = model.get_value(iter, 0)
+        name = model.get_value(iter, 1)
+        markup = '<b>%s</b>' % name
+        if not keep:
+            markup += ' ' + _('will be removed')
+        cell.set_property('markup', markup)
+    
+    def toggled(self, render_toggle, path):
+        self.liststore[path][0] = not self.liststore[path][0]
+        sensitive = False
+        for row in self.liststore:
+            keep = row[0]
+            sensitive = sensitive or not keep
+        self.button_delete.set_sensitive(sensitive)
+
+    def get_unused_software_configuration(self):
+        ret = []
+        for line in os.popen('dpkg -l'):
+            try:
+                state, name = line.split()[:2]
+                if state == 'rc':
+                    ret.append(name)
+            except ValueError: # need more than 1 value to unpack
+                pass
+        return ret
+    
+    def refresh(self):
+        pkgs = self.get_unused_software_configuration()
+        self.liststore.clear()
+        self.view.set_model(None)
+        for name in pkgs:
+            self.liststore.append([True, name])
+        self.view.set_model(self.liststore)
+        self.view.set_sensitive(True)
+        self.button_unselect_all.set_sensitive(True)
+        
+        if pkgs == []:
+            self.view.set_sensitive(False)
+            self.liststore.append([True, _('There is no unused software configuration.')])
+            self.button_delete.set_sensitive(False)
+            self.button_unselect_all.set_sensitive(False)
+    
+    def unselect_all(self):
+        for row in self.liststore:
+            keep = row[0]
+            row[0] = not keep
+        self.button_delete.set_sensitive(True)
+    
+    def delete_packages(self):
+        to_delete = []
+        for row in self.liststore:
+            keep = row[0]
+            name = row[1]
+            if not keep: to_delete.append(name)
+        if to_delete:
+            try: run_as_root_in_terminal('dpkg --purge ' + ' '.join(to_delete))
+            except:
+                print_traceback()
+        self.refresh()
+    
+    def __init__(self):
+        self.liststore = gtk.ListStore(bool, str) #keep?, name 
+        render_keep = gtk.CellRendererToggle()
+        render_keep.connect('toggled', self.toggled)
+        column_keep = gtk.TreeViewColumn()
+        column_keep.pack_start(render_keep, False)
+        column_keep.add_attribute(render_keep, 'active', 0)
+        render_text = gtk.CellRendererText()
+        column_text = gtk.TreeViewColumn(_('Unused software configuration'))
+        column_text.pack_start(render_text, True)
+        column_text.set_cell_data_func(render_text, self.text_data_func)
+        self.view = view = gtk.TreeView(self.liststore)
+        view.append_column(column_keep)
+        view.append_column(column_text)
+        view.set_rules_hint(True)
+        scroll = gtk.ScrolledWindow()
+        scroll.set_policy(gtk.POLICY_NEVER, gtk.POLICY_AUTOMATIC)
+        scroll.set_shadow_type(gtk.SHADOW_IN)
+        scroll.add(view)
+        
+        button_refresh = gtk.Button(stock = gtk.STOCK_REFRESH)
+        button_refresh.connect('clicked', lambda *w: self.refresh())
+        self.button_unselect_all = button_unselect_all = gtk.Button(_('Unselect all'))
+        button_unselect_all.connect('clicked', lambda *w: self.unselect_all())
+        self.button_delete = button_delete = gtk.Button(stock = gtk.STOCK_DELETE)
+        button_delete.connect('clicked', lambda *w: self.delete_packages())
+        button_box = gtk.VBox(False, 5)
+        button_box.pack_start(button_refresh, False)
+        button_box.pack_start(button_unselect_all, False)
+        button_box.pack_start(button_delete, False)
+        align = gtk.Alignment(0, 0.5)
+        align.add(button_box)
+
+        gtk.HBox.__init__(self, False, 10)
+        self.pack_start(scroll)
+        self.pack_start(align, False)
+        
+        view.set_sensitive(False)
+        self.liststore.append([True, _('Please press the "Refresh" button.')])
         button_unselect_all.set_sensitive(False)
         button_delete.set_sensitive(False)
