@@ -1,6 +1,7 @@
 2010-05-21 Homer Xing <homer.xing@gmail.com>
 
     * Clean up Nautilus thumbnails image cache.
+    * Remove unused software configuration.
 
 2010-05-20 Homer Xing <homer.xing@gmail.com>
 
